@@ -5,7 +5,9 @@ Supported Presently
 Changelog for 1.3.12
 * Corrected processing of <?lsmb tags in order/invoice numbers (Chris T)
 * Corrected handling of accounts in dropdowns where () are present (Chris T)
-* Corrected erroneous log messages from bebugging 1.3.11 (Chris T)
+* Corrected erroneous log messages from debugging 1.3.11 (Chris T)
+* Autocomplete ajaxselect now work (degraded) without Javascript (Chris T)
+* Autocomplete ajaxselect now accept full entry without waiting (Chris T)
 
 Changelog for 1.3.11
 * Fixed outstanding report for payment reversal and partial payments (Chris T)
